src/Container/EventGallery.css
.whole-gallery {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.galleryandbox {
  width: 55%;
  height: 100vh;
  overflow: scroll;
}
.eventgallery {
  display: flex;
  width: 100%;
  flex-direction: column;
  height: 1200px;
  align-items: center;
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
  justify-content: center;
}

.search-box-container {
  display: flex;
  flex-direction: column;
  width: 85%;
  max-width: 1000px;
  font-size: 12px;
  padding: 1em;
  border-radius: 20px;
  background-color: #f7f7f7;
  box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
}

.search-box-container:hover{
  box-shadow: 2px 5px 10px rgb(104, 104, 104);
  transition: all 0.5s ease-in-out;
}

.searchbox {

  width: 100%;
  max-width: 600px;
  height: 30px;
  margin: 10px auto;
  font-size: 15px;
  text-align: center;
  border-radius: 15px;
  border: 0px #ff0000;
  box-shadow: 2px 5px 10px #e0e0e0;
}

.test{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

